<resources>
    <string name="app_name">Senet</string>
    <string name="login_nickname">Nick</string>
    <string name="login_nickname_default">valesz</string>
    <string name="login_address">Address</string>
    <string name="login_address_default">localhost</string>
    <string name="login_port">Port</string>
    <string name="login_port_default">65000</string>
    <string name="login_connect">Connect</string>
    <string name="login_error">Error</string>
    <string name="game_player1_name">Player 1</string>
    <string name="game_player2_name">Player 2</string>
    <string name="game_throw_caption">Throw!</string>
    <string name="game_throw_value">-</string>
    <string name="endgame_winner">The game has ended, player 1 wins!</string>
    <string name="endgame_playagain">Play again </string>
    <string name="endgame_another_server">Another server</string>
    <string name="game_end_turn_caption">End turn</string>
    <string name="game_leave_caption">Leave</string>
    <string name="game_message_default" />
</resources>
